<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtKodigoa"
        android:layout_width="412dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/cod"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/txtDeskribapena"
        android:layout_width="412dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/Desc"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKodigoa"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/txtPrezioa"
        android:layout_width="412dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/Prezioa"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDeskribapena"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/btnGorde"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/Gorde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrezioa"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/btnKontsultaK"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/KontsultaK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGorde"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/btnKontsultaD"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/KontsultaD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKontsultaK"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/btnEzabatu"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/Ezabatu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKontsultaD"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/btnAldatu"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/Aldatu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEzabatu"
        app:layout_constraintVertical_bias="0.104" />

</androidx.constraintlayout.widget.ConstraintLayout>